--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nextoken",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -18,8 +19,14 @@
     "autoprefixer": "^10.4.2",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
+    "git-cz": "^4.8.0",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.18",
     "typescript": "4.5.5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/git-cz"
+    }
   }
 }
